# omakase

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
conf/: logging.toml
omakase/: annotations.py  exceptions.py  io.py  observer_logic.py  observers.py  om_logging.py
omakase/ankiapi/server/: ankidb.py
omakase/backend/: auth.py  decks.py  login.py  main.py  mnemonics.py  nicegui_utils.py  notes.py  om_user.py
omakase/backend/mnemonics/: __init__.py  base.py  target_concepts.py  tc_sound.py
omakase/backend/mnemonics_bak/: base.py.bak  target_compo.py
omakase/frontend/: login.py  main.py  routing.py  user.py  web_user.py
omakase/frontend/tabs/: __init__.py  add_doc.py  add_smaller.py  edit_decks.py  edit_notes.py  stats.py  utils.py
omakase/frontend/tabs/edit_decks/: cardlevel.py  data.py  deckslevel.py
scripts/: ui.py
templates/reading_mnem/: 0.jinja
tests/: test_empty.py  test_mnemonics.py
