[tool.poetry]
name = "omakase"
version = "0.1.0"
description = ""
authors = ["Xavier Fontaine <xavier.fontainec@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nicegui = "^1.4.14"
pandas = "^2.1.4"
fastapi = "^0.109.0"
loguru = "^0.7.2"
anki = "^23.12.1"
beartype = "^0.17.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.3"
flake8 = "^6.1.0"
pre-commit = "^3.6.0"
ipython = "^8.19.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
